--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>lv.tsi</groupId>
     <artifactId>exam</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>exam</name>
+    <title>exam</title>
     <description>Demo project for Spring Boot</description>
 
 <!--    <properties>-->
@@ -37,6 +37,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
         </dependency>
     </dependencies>
 
