--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     <name>exam</name>
     <description>Demo project for Spring Boot</description>
 
-<!--    <properties>-->
-<!--        <java.version>11</java.version>-->
-<!--    </properties>-->
+    <!--    <properties>-->
+    <!--        <java.version>11</java.version>-->
+    <!--    </properties>-->
 
     <dependencies>
         <dependency>
@@ -38,6 +38,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
