--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-
+spring:
+  datasource:
+    name: test
+    url: jdbc:h2:~/test;DB_CLOSE_DELAY=-1
+    driverClassName: org.h2.Driver
+    username: vartwo
+    password:
+    initialize: false
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+hibernate.ddl-auto: update
+h2.console.enabled: true
